--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,6 +23,9 @@ footer {
 }
 
 .link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 2rem;
     height: 2rem;
     margin-right: 1rem;
@@ -34,28 +37,34 @@ footer {
     height: 2rem;
 }
 
+.grow-yt:hover {
+    width: 2.2rem;
+    height: 2.2rem;
+}
+
+.grow-fb:hover {
+    width: 2.4rem;
+    height: 2.4rem;
+}
+
 .copyright-txt {
     font-style: italic;
     font-size: 14px;
     margin-bottom: 2rem;
 }
 
-.github-link {
+.website-developer-link {
     color: white;
-    text-decoration: none;
 }
 
-.github-link:hover {
+.website-developer-link:hover {
     color: rgb(224,117,60);
-    text-decoration: underline;
 }
 
 .privacy-policy {
     color: white;
-    text-decoration: none;
 }
 
 .privacy-policy:hover  {
     color: rgb(224,117,60);
-    text-decoration: underline;
 }
